--- a/index.html
+++ b/index.html
@@ -2,36 +2,38 @@
 <html>
 <head>
 	<title>Government of India, Department of Agriculture &amp; Cooperation, Ministry of Agriculture</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 	<header>
-		<div>
+		<div align = "right">
 			<ul>
-				<li><a href="#">Skip to Main Content</a></li>
-				<li><a href="#">Screen Reader Access</a></li>
+				<li><font size="2"><a href="#">Skip to Main Content</a></font></li>
+				<li><font size="2"><a href="#">Screen Reader Access</a></font></li>
 			</ul>
 		</div>
-		<div>
+		<div align = "center">
 			<h1>Department of Agriculture &amp; Cooperation</h1>
 			<h2>Ministry of Agriculture, Government of India</h2>
-		<div>
+		</div>
+
+		<nav align = "center">		
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Acts &amp; Rules</a></li>
+				<li><a href="#">Citizen Charter</a></li>
+				<li><a href="#">RFD Schemes &amp; Guidelines</a></li>
+				<li><a href="#">Write to Us</a></li>
+				<li><a href="#">Miscellaneous</a></li>
+				<li><a href="#">Recruitments</a></li>
+				<li><a href="#">Tenders</a></li>
+				<li><a href="#">Reach Us</a></li>
+			</ul>
+		</nav>
 	</header>
 
-	<nav>		
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Acts &amp; Rules</a></li>
-			<li><a href="#">Citizen Charter</a></li>
-			<li><a href="#">RFD Schemes &amp; Guidelines</a></li>
-			<li><a href="#">Write to Us</a></li>
-			<li><a href="#">Miscellaneous</a></li>
-			<li><a href="#">Recruitments</a></li>
-			<li><a href="#">Tenders</a></li>
-			<li><a href="#">Reach Us</a></li>
-		</ul>
-		
-	</nav>
+	
 	
 	<main>
 		<nav>
@@ -46,34 +48,38 @@
 			</ul>
 		</nav>
 		<section>
-			<h3>Recent Initiatives</h3>
-			<ul>
-				<li><a href="#">Group Recommendations of Pre-Rabi DAC-ICAR Interface held in September 2014.</a></li>
-				<li><a href="#">Handbook on Horticulture Statistics 2014 releasedNew</a></li>
-				<li><a href="#">All Mobile Based Services Enabled through mKisan Portal of Ministry of Agriculture New</a></li>
-				<li><a href="#">Saffron Spice Park foundation laid at Pampore, J&amp;K By Hon'ble Agriculture Minister</a></li>
-				<li><a href="#">Third Advance Estimates for Horticultural Production Released</a></li>
-				<li><a href="#">Administrative Approvals of Projects titled "Development of Surtable Technology".</a></li>
-			</ul>
-		</section>
+			<div id = "recent">
+				<h3>Recent Initiatives</h3>
+				<ul>
+					<li><a href="#">Group Recommendations of Pre-Rabi DAC-ICAR Interface held in September 2014.</a></li>
+					<li><a href="#">Handbook on Horticulture Statistics 2014 releasedNew</a></li>
+					<li><a href="#">All Mobile Based Services Enabled through mKisan Portal of Ministry of Agriculture New</a></li>
+					<li><a href="#">Saffron Spice Park foundation laid at Pampore, J&amp;K By Hon'ble Agriculture Minister</a></li>
+					<li><a href="#">Third Advance Estimates for Horticultural Production Released</a></li>
+					<li><a href="#">Administrative Approvals of Projects titled "Development of Surtable Technology".</a></li>
+				</ul>
+			</div>
 	
-		<section>
-			<h3>What's New</h3>
-			<ul>
-				<li><a href="#">Assessment of soil health</a></li>
-				<li><a href="#">Annual Report 2013-2014 of the Central Sector Scheme"Monitoring of Pesticides Residues at National Level"</a></li>
-				<li><a href="#">Guidelines for Establishing SPMUs and Sample RFP for the same have been issued</a></li>
-				<li><a href="#">Proposed Amendments in Insecticides Rules,1971.</a></li>
-				<li><a href="#">Amendment in the Insecticides Rules,1971 Regarding Labels and Leaflets.</a></li>
-				<li><a href="#">Report on testing of fruits and vegetable samples in Delhi for Pesticide Residues.</a></li>
-			</ul>
+			<div id = "new">
+				<h3>What's New</h3>
+				<ul>
+					<li><a href="#">Assessment of soil health</a></li>
+					<li><a href="#">Annual Report 2013-2014 of the Central Sector Scheme"Monitoring of Pesticides Residues at National Level"</a></li>
+					<li><a href="#">Guidelines for Establishing SPMUs and Sample RFP for the same have been issued</a></li>
+					<li><a href="#">Proposed Amendments in Insecticides Rules,1971.</a></li>
+					<li><a href="#">Amendment in the Insecticides Rules,1971 Regarding Labels and Leaflets.</a></li>
+					<li><a href="#">Report on testing of fruits and vegetable samples in Delhi for Pesticide Residues.</a></li>
+				</ul>
+			</div>
+
+			<div id = "image">
+				Images go here Images go here Images go here Images go here Images go here Images go here Images go here Images go here Images go here Images go here
+			</div>
 		</section>	
-		<section>
-			Images go here Images go here Images go here Images go here Images go here Images go here Images go here Images go here Images go here Images go here
-		</section>
+		
 	</main>
 	<footer>
-		<nav>
+		<nav align = "center">
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Archives</a></li>
@@ -85,7 +91,7 @@
 				<li><a href="#">Website Policy</a></li>
 			</ul>
 		</nav>
-		<div>
+		<div align = "center">
 			This site is best viewed on IE 8 and Higher Versions<br/>
 			This website belongs to Department of Agriculture &amp; Cooperation<br/>
 		</div>
