After validating code

--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Government of India, Department of Agriculture &amp; Cooperation, Ministry of Agriculture</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 	<header>
-		<div align = "right">
+		<div id = "accessor">
 			<ul>
-				<li><font size="2"><a href="#">Skip to Main Content</a></font></li>
-				<li><font size="2"><a href="#">Screen Reader Access</a></font></li>
+				<li><a href="#">Skip to Main Content</a></li>
+				<li><a href="#">Screen Reader Access</a></li>
 			</ul>
 		</div>
-		<div align = "center">
+		<div>
 			<h1>Department of Agriculture &amp; Cooperation</h1>
 			<h2>Ministry of Agriculture, Government of India</h2>
 		</div>
 
-		<nav align = "center">		
+		<nav>		
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Acts &amp; Rules</a></li>
@@ -79,7 +80,7 @@
 		
 	</main>
 	<footer>
-		<nav align = "center">
+		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Archives</a></li>
@@ -91,11 +92,11 @@
 				<li><a href="#">Website Policy</a></li>
 			</ul>
 		</nav>
-		<div align = "center">
+		<div>
 			This site is best viewed on IE 8 and Higher Versions<br/>
 			This website belongs to Department of Agriculture &amp; Cooperation<br/>
 		</div>
-	<footer>
+	</footer>
 
 </body>
 </html>
